--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-h1{
+h1, h2{
     text-align: center;
 }
 img{
@@ -6,4 +6,11 @@ img{
   margin-left: auto;
   margin-right: auto;
   width: 25%;
+}
+
+.img1{
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
